# pg_jsonb_learn

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
docker/: docker-compose.yml  entrypoint.sh  nginx.conf
migrations/: env.py
src/: main.py
src/config/: config.py  logging.py
src/db/: base.py  database.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023_09_16_0012-b072d05bbce9_init.py
src/dependencies/: core.py
src/dependencies/di/: init_dependencies.py
src/exceptions/: core.py
src/models/: core.py
src/repositories/: core.py
src/routers/: core.py
src/schemas/: core.py
src/services/: core.py
tests/: .env.example  conftest.py  core_test.py
tests/files/: right_file.csv
