[tool.poetry]
name = "postgresql_json_learn"
version = "0.1.0"
description = ""
authors = []

[tool.black]
line-length = 100

[tool.isort]
atomic = true
profile = "black"

[tool.poetry.dependencies]
python="3.11.4"
pre-commit = "^3.4.0"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
postgres = "^4.0"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
pandas = "^2.1.0"
gunicorn = "^21.2.0"
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.7"
flake8 = "^6.1.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-todo = "^0.7"
flake8-variables-names = "^0.0.5"
isort = "^5.12.0"
black="^23.7.0"
add-trailing-comma="^3.0.1"
